--- a/KalendarzKariery/KalendarzKariery/Views/Shared/_Layout.cshtml
+++ b/KalendarzKariery/KalendarzKariery/Views/Shared/_Layout.cshtml
@@ -5,7 +5,9 @@
 <meta name="viewport" content="width=device-width" />
 <title>@ViewBag.Title</title>
 @Styles.Render("~/Content/css")
+
 @Scripts.Render("~/bundles/jquery")
+<script src="~/Scripts/jquery-ui-1.8.20.custom.min.js"></script>
 @Scripts.Render("~/bundles/modernizr")
 @RenderSection("scripts", required: false)
 <script src="~/Scripts/CalendarWidget/calendarWidget.js"></script>
