--- a/KalendarzKariery/KalendarzKariery/Content/Site.css
+++ b/KalendarzKariery/KalendarzKariery/Content/Site.css
@@ -8,10 +8,6 @@ body {
     font-family: "Segoe UI", Verdana, Helvetica, Sans-Serif;
     padding: 0px;
     margin: 0px;
-    /*
-
-background-image: url("../Images/kalendBackground.png");
-*/
 }
 
 header, footer, nav, section, div {
@@ -19,64 +15,9 @@ header, footer, nav, section, div {
     margin: 0;
 }
 
-
-/* Styles for basic forms
------------------------------------------------------------*/
-fieldset {
-    border: 1px solid #ddd;
-    padding: 0 1.4em 1.4em 1.4em;
-    margin: 0 0 1.5em 0;
-}
-
-legend {
-    font-size: 1.2em;
-    font-weight: bold;
-}
-
-textarea {
-    min-height: 75px;
-}
-
-.editor-label {
-    margin: 1em 0 0 0;
-}
-
-.editor-field {
-    margin: 0.5em 0 0 0;
-}
-
-
-/* Styles for validation helpers
------------------------------------------------------------*/
-.field-validation-error {
-    color: #f00;
-}
-
-.field-validation-valid {
-    display: none;
-}
-
-.input-validation-error {
-    border: 1px solid #f00;
-    background-color: #fee;
-}
-
-.validation-summary-errors {
-    font-weight: bold;
-    color: #f00;
-}
-
-.validation-summary-valid {
-    display: none;
-}
-
 /* Kalendarz Kariery
 -----------------------------------------------------------*/
 body header {
-}
-
-#bodyContainer {
-position:relative;
 }
 
 /*calendar css*/
@@ -186,7 +127,7 @@ position:relative;
     height: 100%;
     background-image: url("../Images/kalendarzTloLewy.png");
     background-repeat: no-repeat;
-    background-position: right;
+    background-position:right;
     background-size: cover;
     top: 0px;
     left: 0px;
@@ -198,7 +139,7 @@ position:relative;
     height: 100%;
     background-image: url("../Images/kalendarzTloPrawo.png");
     background-repeat: no-repeat;
-    background-position: left;
+    background-position:left;
     background-size: cover;
     right: 0px;
     top: 0px;
@@ -208,4 +149,137 @@ position:relative;
 #mainContainer {
     word-spacing: 0px;
     letter-spacing: 0px;
+}
+
+
+/*
+slider
+*/
+
+.slide-container {
+position:relative;
+overflow:scroll;
+width:2000px;
+}
+
+.slide-item {
+position:relative;
+display:inline-block;
+}
+
+slide-item-calendar {
+max-width:100%;
+}
+
+/*
+Slider
+*/
+
+#slides {
+  position: relative;
+}
+#slides .slides-container {
+  display: none;
+}
+#slides .scrollable {
+  *zoom: 1;
+  position: relative;
+  top: 0;
+  left: 0;
+  overflow-y: auto;
+  -webkit-overflow-scrolling: touch;
+  height: 100%;
+}
+#slides .scrollable:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.slides-navigation {
+  margin: 0 auto;
+  position: absolute;
+  z-index: 3;
+  top: 46%;
+  width: 100%;
+}
+.slides-navigation a {
+  position: absolute;
+  display: block;
+}
+.slides-navigation a.prev {
+  left: 0;
+}
+.slides-navigation a.next {
+  right: 0;
+}
+
+.slides-pagination {
+  position: absolute;
+  z-index: 3;
+  bottom: 0;
+  text-align: center;
+  width: 100%;
+}
+.slides-pagination a {
+  border: 2px solid #222;
+  border-radius: 15px;
+  width: 10px;
+  height: 10px;
+  display: inline-block;
+  margin: 2px;
+}
+.slides-pagination a.current {
+  background: #222;
+}
+
+
+/* Styles for basic forms
+-----------------------------------------------------------*/
+fieldset {
+    border: 1px solid #ddd;
+    padding: 0 1.4em 1.4em 1.4em;
+    margin: 0 0 1.5em 0;
+}
+
+legend {
+    font-size: 1.2em;
+    font-weight: bold;
+}
+
+textarea {
+    min-height: 75px;
+}
+
+.editor-label {
+    margin: 1em 0 0 0;
+}
+
+.editor-field {
+    margin: 0.5em 0 0 0;
+}
+
+
+/* Styles for validation helpers
+-----------------------------------------------------------*/
+.field-validation-error {
+    color: #f00;
+}
+
+.field-validation-valid {
+    display: none;
+}
+
+.input-validation-error {
+    border: 1px solid #f00;
+    background-color: #fee;
+}
+
+.validation-summary-errors {
+    font-weight: bold;
+    color: #f00;
+}
+
+.validation-summary-valid {
+    display: none;
 }
