--- a/KalendarzKariery/KalendarzKariery/Views/Shared/_Layout.cshtml
+++ b/KalendarzKariery/KalendarzKariery/Views/Shared/_Layout.cshtml
@@ -11,8 +11,10 @@
 @Scripts.Render("~/bundles/modernizr")
 @RenderSection("scripts", required: false)
 <script src="~/Scripts/CalendarWidget/calendarWidget.js"></script>
-
-
+<script src="~/Scripts/CalendarWidget/Slider/jquery.animate-enhanced.min.js"></script>
+<script src="~/Scripts/CalendarWidget/Slider/jquery.easing.1.3.js"></script>
+<script src="~/Scripts/CalendarWidget/Slider/jquery.superslides.min.js"></script>
+<script src="~/Scripts/CalendarWidget/Slider/application.js"></script>
 </head>
 <body>
 <header>
