--- a/KalendarzKariery/KalendarzKariery/Content/Site.css
+++ b/KalendarzKariery/KalendarzKariery/Content/Site.css
@@ -1,18 +1,18 @@
 ﻿html {
-    padding: 0px;
-    margin: 0px;
+	padding: 0px;
+	margin: 0px;
 }
 
 body {
-    font-size: .85em;
-    font-family: "Segoe UI", Verdana, Helvetica, Sans-Serif;
-    padding: 0px;
-    margin: 0px;
+	font-size: .85em;
+	font-family: "Segoe UI", Verdana, Helvetica, Sans-Serif;
+	padding: 0px;
+	margin: 0px;
 }
 
 header, footer, nav, section, div {
-    display: block;
-    margin: 0;
+	display: block;
+	margin: 0;
 }
 
 /* Kalendarz Kariery
@@ -22,133 +22,159 @@ body header {
 
 /*calendar css*/
 #calendar {
-    margin: auto;
-    position: relative;
-    width: 90%;
-    height: 500px;
-    color: rgb(177,177,177);
-    display: table;
-    table-layout: fixed;
-    border-spacing: 2px;
+	margin: auto;
+	position: relative;
+	width: 100%;
+	height: 500px;
+	color: rgb(177,177,177);
+	display: table;
+	table-layout: fixed;
+	border-spacing: 2px;
+}
+
+.calendar-hours {
+	width: 100%;
+	height: 14px;
+	display: table-cell;
+	overflow: hidden;
+	text-align:center;
+}
+
+.hour {
+	padding: 5px;
+	font-size: 10px;
 }
 
 #current-month-header {
-    font-weight: bold;
-    font-size: 2em;
-    display: table-caption;
-    padding: 20px;
-    padding-left: 0px;
+	font-weight: bold;
+	font-size: 2em;
+	display: table-caption;
+	text-align: center;
+	padding-top: 20px;
 }
 
 .weekday-container {
-    display: table-row;
+	display: table-row;
 }
 
 .weekday {
-    border: 2px solid rgba(255, 255, 255, 0.9);
-    -webkit-border-radius: 10px;
-    -moz-border-radius: 10px;
-    border-radius: 10px;
-    display: table-cell;
-    text-align: center;
+	border: 2px solid rgba(255, 255, 255, 0.9);
+	-webkit-border-radius: 10px;
+	-moz-border-radius: 10px;
+	border-radius: 10px;
+	display: table-cell;
+	text-align: center;
 }
 
-    .weekday:nth-child(6) {
-        border: 2px solid rgb(255, 157, 157);
-    }
+	.weekday:nth-child(6) {
+		border: 2px solid rgb(255, 157, 157);
+	}
 
-    .weekday:nth-child(7) {
-        border: 2px solid rgb(255, 157, 157);
-    }
+	.weekday:nth-child(7) {
+		border: 2px solid rgb(255, 157, 157);
+	}
 
 .calendar-cell {
-    height: 80px;
-    display: table-cell;
-    overflow: hidden;
-    position: relative;
+	height: 80px;
+	display: table-cell;
+	overflow: hidden;
+	position: relative;
 }
 
 .calendar-row {
-    width: 100%;
-    height: 84px;
-    margin: auto;
-    display: table-row;
-    position: relative;
+	width: 100%;
+	height: 84px;
+	margin: auto;
+	display: table-row;
+	position: relative;
 }
 
 .current-month {
-    border: 2px solid rgb(235,235,235);
-    background-color: rgba(255,255,255,.9);
-    -moz-box-shadow: 0px 3px 5px rgb(235,235,235);
-    -webkist-box-shadow: 0px 3px 5px rgb(235,235,235);
-    box-shadow: 0px 3px 5px rgb(235,235,235);
+	border: 2px solid rgb(235,235,235);
+	background-color: rgba(255,255,255,.9);
+	-moz-box-shadow: 0px 3px 5px rgb(235,235,235);
+	-webkist-box-shadow: 0px 3px 5px rgb(235,235,235);
+	box-shadow: 0px 3px 5px rgb(235,235,235);
 }
 
-    .current-month span {
-        color: rgb(177,177,177);
-        position: absolute;
-        padding-left: 2px;
-        padding-right: 5px;
-        top: 60px;
-    }
+	.current-month span {
+		color: rgb(177,177,177);
+		position: absolute;
+		padding-left: 2px;
+		padding-right: 5px;
+		top: 60px;
+	}
 
 .other-month {
-    border: 2px solid #ddd;
-    background-color: #eee;
-    position: relative;
-    -moz-box-shadow: 0px 3px 5px #ddd;
-    -webkist-box-shadow: 0px 3px 5px #ddd;
-    box-shadow: 0px 3px 5px #ddd;
+	border: 2px solid #ddd;
+	background-color: #eee;
+	position: relative;
+	-moz-box-shadow: 0px 3px 5px #ddd;
+	-webkist-box-shadow: 0px 3px 5px #ddd;
+	box-shadow: 0px 3px 5px #ddd;
 }
 
-    .other-month span {
-        position: absolute;
-        padding-left: 2px;
-        padding-right: 5px;
-        top: 60px;
-    }
+	.other-month span {
+		position: absolute;
+		padding-left: 2px;
+		padding-right: 5px;
+		top: 60px;
+	}
 
 #calendarBg {
-    position: relative;
-    width: 80%;
-    left: 10%;
+	position: relative;
+	width: 80%;
+	left: 10%;
 }
 
-    #calendarBg img {
-        top: 0px;
-        left: 0px;
-        height: 100%;
-        width: 100%;
-        position: absolute;
-    }
-
-#leftSide {
-    width: 9.999%;
-    height: 100%;
-    background-image: url("../Images/kalendarzTloLewy.png");
-    background-repeat: no-repeat;
-    background-position:right;
-    background-size: cover;
-    top: 0px;
-    left: 0px;
-    position: absolute;
+#detailsBg {
+	position: relative;
+	width: 90%;
+	left: 0px;
 }
 
-#rightSide {
-    width: 10%;
-    height: 100%;
-    background-image: url("../Images/kalendarzTloPrawo.png");
-    background-repeat: no-repeat;
-    background-position:left;
-    background-size: cover;
-    right: 0px;
-    top: 0px;
-    position: absolute;
+#lobbyBg {
+	position: relative;
+	width: 90%;
+	left: 0px;
+}
+
+.side {
+	width: 10%;
+	height: 100%;
+	background-repeat: no-repeat;
+	background-size: cover;
+	top: 0px;
+	position: absolute;
+}
+
+#leftSideCalendar {
+	background-image: url("../Images/kalendarzTloLewy.png");
+	background-position: right;
+	left: 0px;
+}
+
+#rightSideCalendar {
+	background-image: url("../Images/kalendarzTloPrawo.png");
+	background-position: left;
+	right: 0px;
+}
+
+#rightSideDetails {
+	background-image: url("../Images/kalendarzTloPrawo.png");
+	background-position: left;
+	right: 0px;
+}
+
+#leftSideLobby {
+	background-image: url("../Images/kalendarzTloLewy.png");
+	background-position: right;
+	left: 0px;
 }
 
 #mainContainer {
-    word-spacing: 0px;
-    letter-spacing: 0px;
+	word-spacing: 0px;
+	letter-spacing: 0px;
 }
 
 
@@ -157,18 +183,18 @@ slider
 */
 
 .slide-container {
-position:relative;
-overflow:scroll;
-width:2000px;
+	position: relative;
+	overflow: scroll;
+	width: 2000px;
 }
 
 .slide-item {
-position:relative;
-display:inline-block;
+	position: relative;
+	display: inline-block;
 }
 
 slide-item-calendar {
-max-width:100%;
+	max-width: 100%;
 }
 
 /*
@@ -176,110 +202,118 @@ Slider
 */
 
 #slides {
-  position: relative;
+	position: relative;
 }
-#slides .slides-container {
-  display: none;
-}
-#slides .scrollable {
-  *zoom: 1;
-  position: relative;
-  top: 0;
-  left: 0;
-  overflow-y: auto;
-  -webkit-overflow-scrolling: touch;
-  height: 100%;
-}
-#slides .scrollable:after {
-  content: "";
-  display: table;
-  clear: both;
-}
+
+	#slides .slides-container {
+		display: none;
+	}
+
+	#slides .scrollable {
+		*zoom: 1;
+		position: relative;
+		top: 0;
+		left: 0;
+		overflow-y: auto;
+		-webkit-overflow-scrolling: touch;
+		height: 100%;
+	}
+
+		#slides .scrollable:after {
+			content: "";
+			display: table;
+			clear: both;
+		}
 
 .slides-navigation {
-  margin: 0 auto;
-  position: absolute;
-  z-index: 3;
-  top: 46%;
-  width: 100%;
-}
-.slides-navigation a {
-  position: absolute;
-  display: block;
-}
-.slides-navigation a.prev {
-  left: 0;
-}
-.slides-navigation a.next {
-  right: 0;
+	margin: 0 auto;
+	position: absolute;
+	z-index: 3;
+	top: 46%;
+	width: 100%;
 }
 
+	.slides-navigation a {
+		position: absolute;
+		display: block;
+	}
+
+		.slides-navigation a.prev {
+			left: 0;
+		}
+
+		.slides-navigation a.next {
+			right: 0;
+		}
+
 .slides-pagination {
-  position: absolute;
-  z-index: 3;
-  bottom: 0;
-  text-align: center;
-  width: 100%;
+	position: absolute;
+	z-index: 3;
+	top: 0;
+	text-align: center;
+	width: 100%;
 }
-.slides-pagination a {
-  border: 2px solid #222;
-  border-radius: 15px;
-  width: 10px;
-  height: 10px;
-  display: inline-block;
-  margin: 2px;
-}
-.slides-pagination a.current {
-  background: #222;
-}
+
+	.slides-pagination a {
+		border: 2px solid #222;
+		border-radius: 15px;
+		width: 10px;
+		height: 10px;
+		display: inline-block;
+		margin: 2px;
+	}
+
+		.slides-pagination a.current {
+			background: #222;
+		}
 
 
 /* Styles for basic forms
 -----------------------------------------------------------*/
 fieldset {
-    border: 1px solid #ddd;
-    padding: 0 1.4em 1.4em 1.4em;
-    margin: 0 0 1.5em 0;
+	border: 1px solid #ddd;
+	padding: 0 1.4em 1.4em 1.4em;
+	margin: 0 0 1.5em 0;
 }
 
 legend {
-    font-size: 1.2em;
-    font-weight: bold;
+	font-size: 1.2em;
+	font-weight: bold;
 }
 
 textarea {
-    min-height: 75px;
+	min-height: 75px;
 }
 
 .editor-label {
-    margin: 1em 0 0 0;
+	margin: 1em 0 0 0;
 }
 
 .editor-field {
-    margin: 0.5em 0 0 0;
+	margin: 0.5em 0 0 0;
 }
 
 
 /* Styles for validation helpers
 -----------------------------------------------------------*/
 .field-validation-error {
-    color: #f00;
+	color: #f00;
 }
 
 .field-validation-valid {
-    display: none;
+	display: none;
 }
 
 .input-validation-error {
-    border: 1px solid #f00;
-    background-color: #fee;
+	border: 1px solid #f00;
+	background-color: #fee;
 }
 
 .validation-summary-errors {
-    font-weight: bold;
-    color: #f00;
+	font-weight: bold;
+	color: #f00;
 }
 
 .validation-summary-valid {
-    display: none;
+	display: none;
 }
