--- a/KalendarzKariery/KalendarzKariery/Views/Home/Index.cshtml
+++ b/KalendarzKariery/KalendarzKariery/Views/Home/Index.cshtml
@@ -1,39 +1,36 @@
 ﻿<div class="navigation-arrows">
-
-
 </div>
 
 <div id="slides">
 	<ul class="slides-container">
 		<li>
-		<div class="slide-item-lobby">
+			<div class="slide-item-lobby">
 				<div id="lobbyBg">
 					<img src="~/Images/kalendarzTlo.png" alt="background" />
 					<section id="lobby">
-						KALENDARZ KARIERY: Lobby
+					@Html.Partial("_Lobby")
 					</section>
 				</div>
 				<div id="rightSideLobby" class="side">
-
 				</div>
 			</div>
 		</li>
 		<li>
 			<div class="slide-item-calendar">
 				<div id="leftSideCalendar" class="side">
-				
 				</div>
 				<div id="calendarBg">
 					<img src="~/Images/kalendarzTlo.png" alt="background" />
 					<section id="calendar">
 					</section>
+					@Html.Partial("_AddNewEvent")
+					@Html.Partial("_HoverEvent")
 				</div>
 				<div id="rightSideCalendar" class="side">
-					
 				</div>
 			</div>
 		</li>
-		<li>			
+		<li>
 			<div class="slide-item-details">
 				<div id="detailsBg">
 					<img src="~/Images/kalendarzTlo.png" alt="background" />
@@ -42,253 +39,409 @@
 					</section>
 				</div>
 				<div id="leftSideDetails" class="side">
-
 				</div>
 			</div>
 		</li>
 	</ul>
 </div>
 
-
 <script type="text/javascript">
 
+	//////////////////////////////////////////////////
+
 	$(function () {
-		$('#calendar').calendarWidget({ month: 3, year: 2013 });
 
-		$(".calendar-cell").each(function (i) {
+		var mainProgram = {
+			Initialize: function () {
 
-			if (i == 5 || i == 6 || i == 12 || i == 13 || i == 19 || i == 20 || i == 26 || i == 27 || i == 33 || i == 34 || i == 40 || i == 41) {
-				$(this).css({
-					"border-color": "rgb(255, 203, 203)",
-					"box-shadow": "0px 3px 5px rgb(255, 203, 203)"
+				var $calendar = $("#calendar");
+				var $details = $("#details");
+				var $lobby = $("#lobby");
+
+				var date = new Date();
+
+				$calendar.calendarWidget({ month: date.getMonth(), year: 2013 });
+
+				$(".calendar-cell").each(function (i) {
+					if (i == 5 || i == 6 || i == 12 || i == 13 || i == 19 || i == 20 || i == 26 || i == 27 || i == 33 || i == 34 || i == 40 || i == 41) {
+						$(this).css({
+							"border-color": "rgb(255, 203, 203)",
+						});
+					}
 				});
+
+				$calendar.append('<div class="calendar-navigation-arrows-left"><img src="Images/Nav/arrowLeft.png" alt="arrow-left"/></div>');
+				$calendar.append('<div class="calendar-navigation-arrows-right"><img src="Images/Nav/arrowRight.png" alt="arrow-Right"/></div>');
+				$details.append('<div class="details-navigation-arrows-left"><img src="Images/Nav/arrowLeft.png" alt="arrow-Left"/></div>');
+				$lobby.append('<div class="lobby-navigation-arrows-right"><img src="Images/Nav/arrowRight.png" alt="arrow-Right"/></div>');
+
+				this.Initialize.InitializeHover = function () {
+
+					$container = $(".event-hover-container");
+
+					$("#mainContainer").on({
+						mouseenter: function () {
+
+							var name = $(this).find("input").attr("name");
+							var adress = $(this).find("input").attr("adress");
+							var startHour = $(this).find("input").attr("startHour");
+							var endHour = $(this).find("input").attr("endHour");
+
+							var offset = $(this).offset();
+
+							$container.css("left", offset.left - 100);
+							$container.css("top", offset.top - 100);
+
+							$container.find(".event-hover-name").text(name);
+							$container.find(".event-hover-adress").text(adress);
+							$container.find(".event-hover-startHour").text(startHour);
+							$container.find(".event-hover-endHour").text(endHour);
+
+							$container.show();
+						},
+						mouseleave: function () {
+							$container.hide();
+						}
+					}, '.event-rectangle');
+
+
+					var $currentMonthIcon = $(".current-month .addNewEvent-cellIcon");
+					var $otherMonthIcon = $(".other-month .addNewEvent-cellIcon");
+
+					$(".current-month").hover(function () {
+						$(this).css({
+							"cursor": "pointer",
+							"-moz-box-shadow": "none",
+							"-webkist-box-shadow": "none",
+							"box-shadow": "none",
+							"top": "3px"
+						}).find($currentMonthIcon).fadeIn();
+					}, function () {
+						$(this).css({
+							"cursor": "auto",
+							"-moz-box-shadow": "0px 3px 5px rgb(235,235,235)",
+							"-webkist-box-shadow": "0px 3px 5px rgb(235,235,235)",
+							"box-shadow": "0px 3px 5px rgb(235,235,235)",
+							"top": "0px"
+						}).find($currentMonthIcon).hide();
+					});
+					$(".other-month").hover(function () {
+						$(this).css({
+							"cursor": "pointer",
+							"-moz-box-shadow": "none",
+							"-webkist-box-shadow": "none",
+							"box-shadow": "none",
+							"top": "3px"
+						}).find($otherMonthIcon).fadeIn();
+					}, function () {
+						$(this).css({
+							"cursor": "auto",
+							"-moz-box-shadow": "0px 3px 5px #ddd",
+							"-webkist-box-shadow": "0px 3px 5px #ddd",
+							"box-shadow": "0px 3px 5px #ddd",
+							"top": "0px"
+						}).find($otherMonthIcon).fadeOut();
+					});
+
+					var $menuItem = $(".menu-item-container .menu-item");
+
+					$(".menu-item-container").hover(function () {
+						$(this).css({
+							"cursor": "pointer",
+							"background": "rgb(128, 128, 128)"
+						}).find($menuItem).css({
+							"background": "white",
+							"color": "gray"
+						});
+					}, function () {
+						$(this).css({
+							"cursor": "auto",
+							"background": "transparent"
+						}).find($menuItem).css({
+							"background": "rgb(243, 243, 243)",
+							"color": "rgb(199, 185, 185)"
+						});
+					});
+
+					$("#leftSide").hover(function () {
+						$(this).css({
+							"cursor": "pointer"
+						});
+					}, function () {
+						$(this).css({
+							"cursor": "auto"
+						});
+					});
+					$("#rightSide").hover(function () {
+						$(this).css({
+							"cursor": "pointer"
+						});
+					}, function () {
+						$(this).css({
+							"cursor": "auto"
+						})
+					});
+
+					var $leftSideCalendar = $("#leftSideCalendar");
+					var $rightSideCalendar = $("#rightSideCalendar");
+					var $leftSideDetails = $("#leftSideDetails");
+					var $rightSideLobby = $("#rightSideLobby");
+
+					$leftSideCalendar.hover(function () {
+						$(this).css({
+							"backgroundPosition": "left",
+							"cursor": "pointer"
+						});
+					}, function () {
+						$(this).css({
+							"backgroundPosition": "right",
+							"cursor": "auto"
+						})
+					});
+					$(".calendar-navigation-arrows-left").hover(function () {
+						$(this).css({
+							"cursor": "pointer"
+						});
+
+						$leftSideCalendar.css({
+							"backgroundPosition": "left"
+						});
+					}, function () {
+						$(this).css({
+							"cursor": "auto"
+						});
+						$leftSideCalendar.css({
+							"backgroundPosition": "right"
+						})
+					});
+					$rightSideCalendar.hover(function () {
+						$(this).css({
+							"backgroundPosition": "right",
+							"cursor": "pointer"
+						});
+					}, function () {
+						$(this).css({
+							"backgroundPosition": "left",
+							"cursor": "auto"
+						})
+					});
+					$(".calendar-navigation-arrows-right").hover(function () {
+						$(this).css({
+							"cursor": "pointer"
+						});
+
+						$rightSideCalendar.css({
+							"backgroundPosition": "right"
+						});
+					}, function () {
+						$(this).css({
+							"cursor": "auto"
+						});
+						$rightSideCalendar.css({
+							"backgroundPosition": "left"
+						})
+					});
+
+					$(".lobby-navigation-arrows-right").hover(function () {
+						$(this).css({
+							"cursor": "pointer"
+						});
+
+						$rightSideLobby.css({
+							"backgroundPosition": "right"
+						});
+					}, function () {
+						$(this).css({
+							"cursor": "auto"
+						});
+						$rightSideLobby.css({
+							"backgroundPosition": "left"
+						})
+					});
+					$(".details-navigation-arrows-left").hover(function () {
+						$(this).css({
+							"cursor": "pointer"
+						});
+
+						$leftSideDetails.css({
+							"backgroundPosition": "left"
+						});
+					}, function () {
+						$(this).css({
+							"cursor": "auto"
+						});
+						$leftSideDetails.css({
+							"backgroundPosition": "right"
+						})
+					});
+					$leftSideDetails.hover(function () {
+						$(this).css({
+							"backgroundPosition": "left",
+							"cursor": "pointer"
+						});
+					}, function () {
+						$(this).css({
+							"backgroundPosition": "right",
+							"cursor": "auto"
+						})
+					});
+					$rightSideLobby.hover(function () {
+						$(this).css({
+							"backgroundPosition": "right",
+							"cursor": "pointer"
+						});
+					}, function () {
+						$(this).css({
+							"backgroundPosition": "left",
+							"cursor": "auto"
+						})
+					});
+
+					var $closeBtnAddEventContainer = $("#closeBtn-add-event-container");
+
+					$closeBtnAddEventContainer.hover(function () {
+						$(this).css({
+							"top": "10px",
+							"cursor": "pointer"
+						})
+					}, function () {
+						$(this).css({
+							"top": "8px",
+							"cursor": "auto"
+						})
+					});
+					$(".close-text").hover(function () {
+						$(this).css({
+							"cursor": "pointer"
+						})
+						$closeBtnAddEventContainer.css({
+							"top": "10px"
+						})
+
+					}, function () {
+						$(this).css({
+							"cursor": "auto"
+						})
+						$closeBtnAddEventContainer.css({
+							"top": "8px"
+						})
+					});
+					$(".border-close-text").hover(function () {
+						$(this).css({
+							"cursor": "pointer"
+						})
+						$closeBtnAddEventContainer.css({
+							"top": "10px"
+						})
+					}, function () {
+						$(this).css({
+							"cursor": "auto"
+						})
+						$closeBtnAddEventContainer.css({
+							"top": "8px"
+						})
+					});
+
+					$("#btnAddNewEvent").hover(function () {
+						$(this).css({
+							"cursor": "pointer"
+						})
+					}, function () {
+						$(this).css({
+							"cursor": "auto"
+						})
+					});
+
+					var $mainContainer = $("#mainContainer");
+
+					$mainContainer.on({
+						mouseenter: function () {
+							$(this).css("background", "rgb(160, 243, 169)");
+						},
+						mouseleave: function () {
+							$(this).css("background", "rgb(225,225,225)");
+						}
+					}, '.light-icon');
+
+					$mainContainer.on({
+						mouseenter: function () {
+							$(this).css("background", "rgb(160, 243, 169)");
+						},
+						mouseleave: function () {
+							$(this).css("background", "rgb(215,215,215)");
+						}
+					}, '.dark-icon');
+
+				}();
+
+				this.Initialize.InitializeClick = function () {
+
+					var $mainContainer = $("#mainContainer");
+
+					$mainContainer.on("click", ".calendar-cell", function (event) {
+						window.location = "#2";
+					});
+
+					$mainContainer.on("click", "#leftSideCalendar", function (event) {
+						window.location = "#0";
+					});
+					$mainContainer.on("click", ".calendar-navigation-arrows-left", function (event) {
+						window.location = "#0";
+					});
+					$mainContainer.on("click", "#rightSideCalendar", function (event) {
+						window.location = "#2";
+					});
+					$mainContainer.on("click", ".calendar-navigation-arrows-right", function (event) {
+						window.location = "#2";
+					});
+					$mainContainer.on("click", "#rightSideLobby", function (event) {
+						window.location = "#1";
+					});
+					$mainContainer.on("click", ".lobby-navigation-arrows-right", function (event) {
+						window.location = "#1";
+					});
+					$mainContainer.on("click", "#leftSideDetails", function (event) {
+						window.location = "#1";
+					});
+					$mainContainer.on("click", ".details-navigation-arrows-left", function (event) {
+						window.location = "#1";
+					});
+
+					$mainContainer.on("click", ".addNewEvent-cellIcon", function (event) {
+						var txtDay = $(this).parent().find(".day").text();
+						$("#hiddenDay").attr("name", txtDay);
+						$("#add-new-event-container").show();
+						event.stopPropagation();
+					});
+
+					var $addNewEventContainer = $("#add-new-event-container");
+
+					$("#closeBtn-add-event-container").click(function () {
+						$addNewEventContainer.fadeOut();
+					});
+					$(".border-close-text").click(function () {
+						$addNewEventContainer.fadeOut();
+					});
+					$(".close-text").click(function () {
+						$addNewEventContainer.fadeOut();
+					});
+
+
+				}();
+			},
+			DrawLines: function () {
+				$("#calendar .calendar-cell").each(function (i) {
+					for (var i = 0; i < 16; i++) {
+						var left = i * 10;
+						$(this).append('<div style="left:' + left + 'px;" class="cell-line' + (i + 7) + ' cell-line-style"></div>');
+
+					}
+				})
 			}
+		}
 
-		});
-		
-
-		$("#calendar").append('<div class="calendar-navigation-arrows-left"><img src="Images/Nav/arrowLeft.png" alt="arrow-left"/></div>');
-		$("#calendar").append('<div class="calendar-navigation-arrows-right"><img src="Images/Nav/arrowRight.png" alt="arrow-Right"/></div>');
-
-		$("#details").append('<div class="details-navigation-arrows-left"><img src="Images/Nav/arrowLeft.png" alt="arrow-Left"/></div>');
-
-		$("#lobby").append('<div class="lobby-navigation-arrows-right"><img src="Images/Nav/arrowRight.png" alt="arrow-Right"/></div>');
-
-		$(".current-month").hover(function () {
-			$(this).css({
-				"cursor": "pointer",
-				"-moz-box-shadow": "none",
-				"-webkist-box-shadow": "none",
-				"box-shadow": "none",
-				"top": "3px",
-			});
-		}, function () {
-			$(this).css({
-				"cursor": "auto",
-				"-moz-box-shadow": "0px 3px 5px rgb(235,235,235)",
-				"-webkist-box-shadow": "0px 3px 5px rgb(235,235,235)",
-				"box-shadow": "0px 3px 5px rgb(235,235,235)",
-				"top": "0px"
-			})
-		});
-
-		$(".other-month").hover(function () {
-			$(this).css({
-				"cursor": "pointer",
-				"-moz-box-shadow": "none",
-				"-webkist-box-shadow": "none",
-				"box-shadow": "none",
-				"top": "3px"
-			});
-		}, function () {
-			$(this).css({
-				"cursor": "auto",
-				"-moz-box-shadow": "0px 3px 5px #ddd",
-				"-webkist-box-shadow": "0px 3px 5px #ddd",
-				"box-shadow": "0px 3px 5px #ddd",
-				"top": "0px"
-
-			})
-		});
-
-		$("#leftSide").hover(function () {
-			$(this).css({
-				"cursor": "pointer"
-			});
-		}, function () {
-			$(this).css({
-				"cursor": "auto"
-			});
-		});
-
-		$("#rightSide").hover(function () {
-			$(this).css({
-				"cursor": "pointer"
-			});
-		}, function () {
-			$(this).css({
-				"cursor": "auto"
-			})
-		});
-
-		$(".slide-item-calendar").on("click", ".calendar-cell", function (event) {
-			window.location = "http://localhost:59940/#2";
-		});
-
-		$("#mainContainer").on("click", "#leftSideCalendar", function (event) {
-			window.location = "http://localhost:59940/#0";
-		});
-		$("#mainContainer").on("click", ".calendar-navigation-arrows-left", function (event) {
-			window.location = "http://localhost:59940/#0";
-		});
-
-		$("#mainContainer").on("click", "#rightSideCalendar", function (event) {
-			window.location = "http://localhost:59940/#2";
-		});
-		$("#mainContainer").on("click", ".calendar-navigation-arrows-right", function (event) {
-			window.location = "http://localhost:59940/#2";
-		});
-
-		$("#mainContainer").on("click", "#rightSideLobby", function (event) {
-			window.location = "http://localhost:59940/#1";
-		});
-		$("#mainContainer").on("click", ".lobby-navigation-arrows-right", function (event) {
-			window.location = "http://localhost:59940/#1";
-		});
-
-		$("#mainContainer").on("click", "#leftSideDetails", function (event) {
-			window.location = "http://localhost:59940/#1";
-		});
-		$("#mainContainer").on("click", ".details-navigation-arrows-left", function (event) {
-			window.location = "http://localhost:59940/#1";
-		});
-
-
-		$("#leftSideCalendar").hover(function () {
-			$(this).css({
-				"backgroundPosition": "left",
-				"cursor": "pointer"
-			});
-		}, function () {
-			$(this).css({
-				"backgroundPosition": "right",
-				"cursor": "auto"
-			})
-		});
-
-		$(".calendar-navigation-arrows-left").hover(function () {
-			$(this).css({
-				"cursor": "pointer"
-			});
-
-			$("#leftSideCalendar").css({
-				"backgroundPosition": "left"
-			});
-		}, function () {
-			$(this).css({
-				"cursor": "auto"
-			});
-			$("#leftSideCalendar").css({
-				"backgroundPosition": "right"
-			})
-		});
-
-		$("#rightSideCalendar").hover(function () {
-			$(this).css({
-				"backgroundPosition": "right",
-				"cursor": "pointer"
-			});
-		}, function () {
-			$(this).css({
-				"backgroundPosition": "left",
-				"cursor": "auto"
-			})
-		});
-
-		$(".calendar-navigation-arrows-right").hover(function () {
-			$(this).css({
-				"cursor": "pointer"
-			});
-
-			$("#rightSideCalendar").css({
-				"backgroundPosition": "right"
-			});
-		}, function () {
-			$(this).css({
-				"cursor": "auto"
-			});
-			$("#rightSideCalendar").css({
-				"backgroundPosition": "left"
-			})
-		});
-
-		$("#rightSideLobby").hover(function () {
-			$(this).css({
-				"backgroundPosition": "right",
-				"cursor": "pointer"
-			});
-		}, function () {
-			$(this).css({
-				"backgroundPosition": "left",
-				"cursor": "auto"
-			})
-		});
-
-		$(".lobby-navigation-arrows-right").hover(function () {
-			$(this).css({
-				"cursor": "pointer"
-			});
-
-			$("#rightSideLobby").css({
-				"backgroundPosition": "right"
-			});
-		}, function () {
-			$(this).css({
-				"cursor": "auto"
-			});
-			$("#rightSideLobby").css({
-				"backgroundPosition": "left"
-			})
-		});
-
-		$(".details-navigation-arrows-left").hover(function () {
-			$(this).css({
-				"cursor": "pointer"
-			});
-
-			$("#leftSideDetails").css({
-				"backgroundPosition": "left"
-			});
-		}, function () {
-			$(this).css({
-				"cursor": "auto"
-			});
-			$("#leftSideDetais").css({
-				"backgroundPosition": "right"
-			})
-		});
-
-		$("#leftSideDetails").hover(function () {
-			$(this).css({
-				"backgroundPosition": "left",
-				"cursor": "pointer"
-			});
-		}, function () {
-			$(this).css({
-				"backgroundPosition": "right",
-				"cursor": "auto"
-			})
-		});
-
-		///////////////////////////////////////
-		//$("#calendar .calendar-cell").each(function (i) {
-		//	for (var i = 0; i < 15; i++) {
-		//		var left = i * 10; 
-		//		$(this).append('<div style="position:absolute;width:1px;opacity:.1;left:' + left + 'px;background:gray;height:100%;"></div>');
-
-		//	}
-
-		//})
+		mainProgram.Initialize();
+		mainProgram.DrawLines();
 
 	});
 
