--- a/KalendarzKariery/KalendarzKariery/Views/Shared/_Layout.cshtml
+++ b/KalendarzKariery/KalendarzKariery/Views/Shared/_Layout.cshtml
@@ -10,11 +10,17 @@
 <script src="~/Scripts/jquery-ui-1.8.20.custom.min.js"></script>
 @Scripts.Render("~/bundles/modernizr")
 @RenderSection("scripts", required: false)
+
+<script src="~/Scripts/knockout-2.1.0.js"></script>
+
 <script src="~/Scripts/CalendarWidget/calendarWidget.js"></script>
 <script src="~/Scripts/CalendarWidget/Slider/jquery.animate-enhanced.min.js"></script>
 <script src="~/Scripts/CalendarWidget/Slider/jquery.easing.1.3.js"></script>
 <script src="~/Scripts/CalendarWidget/Slider/jquery.superslides.min.js"></script>
 <script src="~/Scripts/CalendarWidget/Slider/application.js"></script>
+
+<script src="~/Models/JSModels/CalendarViewModel.js" defer="defer"></script>	
+
 </head>
 <body>
 <header>
