--- a/KalendarzKariery/KalendarzKariery/Content/Site.css
+++ b/KalendarzKariery/KalendarzKariery/Content/Site.css
@@ -17,6 +17,14 @@ header, footer, nav, section, div {
 
 /* Kalendarz Kariery
 -----------------------------------------------------------*/
+.dottedWrapper {
+	background: url(../img/point3.png) repeat scroll 0 0 transparent;
+	height: 100%;
+	width: 100%;
+	z-index: 0;
+	position: absolute;
+}
+
 body header {
 }
 
@@ -58,27 +66,26 @@ body header {
 	margin: auto;
 	position: relative;
 	width: 100%;
-	color: rgb(177,177,177);
-	height:600px;
+	color: rgb(31, 22, 22);
 }
 
 .lobby-content-container {
-
 }
 
 #lobbyBg {
+background:white;
 	position: relative;
 	width: 90%;
 	left: 0px;
 }
 
 #lobby-logo {
-
-padding:20px;
-border:1px solid white;
-background:rgb(202, 255, 208);
-font-size:2em;
-width:300px;
+	background-image: url(../img/kalendarz2.png);
+	font-size: 1em;
+	width: 680px;
+	height: 100%;
+	position: absolute;
+	background-repeat: no-repeat;
 }
 
 .calendar-navigation-arrows-left {
@@ -110,7 +117,7 @@ width:300px;
 .lobby-navigation-arrows-right {
 	right: -8%;
 	position: absolute;
-	top: 50%;
+	top: 200px;
 	width: 50px;
 	z-index: 2;
 }
@@ -147,19 +154,17 @@ width:300px;
 }
 
 #calendar-menu-header {
-display: table-caption;
+	display: table-caption;
 }
 
 .site-menu-header {
-	font-size: 1.2em;
 	text-align: center;
-	margin-top: 20px;
-	background: rgba(107, 107, 107, 0.1);
+	margin-top: 30px;
 	margin-bottom: 5px;
-	height:40px;
-	/*
-	color:rgb(235, 255, 0);
-	*/
+	min-height: 132px;
+	position: relative;
+border-top:1px solid rgb(221,221,221);
+/*border-bottom:1px solid rgb(221,221,221);*/
 }
 
 .weekday-container {
@@ -201,11 +206,16 @@ display: table-caption;
 }
 
 .current-month {
-	border: 2px solid rgb(235,235,235);
+	/*
+border: 2px solid rgb(235,235,235);
+*/
+	border: 2px solid white;
 	background-color: rgba(255,255,255,.9);
+	/*
 	-moz-box-shadow: 0px 3px 5px rgb(235,235,235);
 	-webkist-box-shadow: 0px 3px 5px rgb(235,235,235);
 	box-shadow: 0px 3px 5px rgb(235,235,235);
+	*/
 }
 
 	.current-month span {
@@ -243,27 +253,33 @@ display: table-caption;
 
 
 #leftSideCalendar {
-	background-image: url("../Images/kalendarzTloLewy.png");
-	background-position: left;
+	/*background-image: url("../Images/kalendarzTloLewy.png");*/
+	/*background-position: left;*/
+	background:rgb(37, 37, 37);
 	left: 0px;
 }
 
 #rightSideCalendar {
-	background-image: url("../Images/kalendarzTloPrawo.png");
-	background-position: left;
+	/*background-image: url("../Images/kalendarzTloPrawo.png");*/
+	/*background-position: left;*/
+	background:rgb(37, 37, 37);
 	right: 0px;
 }
 
 #leftSideDetails {
-	background-image: url("../Images/kalendarzTloLewy.png");
-	background-position: right;
+	/*background-image: url("../Images/kalendarzTloLewy.png");
+	background-position: right;*/
+	background:rgb(37, 37, 37);
 	left: 0px;
 }
 
 #rightSideLobby {
-	background-image: url("../Images/kalendarzTloPrawo.png");
-	background-position: left;
+	/*background-image: url("../Images/kalendarzTloPrawo2.png");*/
+	/*background-position: left;*/
 	right: 0px;
+	/*background-repeat: repeat-y;*/
+	background:rgb(37, 37, 37);
+	height:3000px;
 }
 
 
@@ -273,26 +289,37 @@ display: table-caption;
 }
 
 .menu-item {
-	/*
-	
-	background: rgb(244, 245, 237);
-	background: rgb(238, 255, 147);
-*/
-	background: rgb(243, 243, 243);
-	padding-top: 2px;
+	border-top: 2px solid rgb(221, 221, 221);
+    background: rgb(245, 245, 245);
+	height: 50px;
+	color:rgb(122, 122, 122);
+	font-size:0.8em;
+	box-shadow: inset 0px 10px 10px -10px;
+	/*padding-top: 2px;
+	border-top: 2px solid rgb(240, 240, 240);
 	color: rgb(199, 185, 185);
-	text-align: left;
-	border-top: 2px solid rgb(202, 255, 208);
+	text-align: center;	
 	border-bottom: 2px solid rgb(218, 218, 218);
-	font-size: .9em;
+	font-size: .8em;
 	padding: 2px;
 	padding-left: 5px;
+    box-shadow:inset 0px 10px 10px -10px;
+	margin-top:1px;*/
+}
+
+.menu-item span {
+
+position:relative;
+top:10px;
 }
 
 .menu-item-container {
-	margin: 1px;
+	margin:2px;
+	margin-right:3px;
+	position:relative;
+	/*top:-10px;*/
 	float: right;
-	min-width: 180px;
+	max-width: 180px;
 	position: relative;
 }
 
@@ -312,8 +339,9 @@ display: table-caption;
 
 .border-item {
 	width: 100px;
-	border-bottom: 10px solid rgb(202, 255, 208);
-	border-right: 10px solid transparent;
+	/*
+		border-color: rgb(202, 255, 208);
+	*/
 }
 
 #add-new-event-container {
@@ -363,7 +391,7 @@ display: table-caption;
 }
 
 .add-event-fieldset label {
-	width: 100px;
+	width: 150px;
 	display: inline-block;
 }
 
@@ -373,7 +401,7 @@ display: table-caption;
 }
 
 .add-event-form-container {
-	width: 400px;
+	width: 600px;
 }
 
 #btnAddNewEvent {
@@ -425,25 +453,230 @@ background:rgb(115, 233, 162);
 	opacity: .1;
 	background: gray;
 	height: 100%;
-	visibility:hidden;
+	visibility: hidden;
 }
 
 .event-rectangle {
 	position: absolute;
-	height: 20px;
-	background: rgb(202, 255, 208);
+	height: 16px;
 	z-index: 2;
-	background: rgb(255, 236, 136);
 	display: none;
+	border-radius: 8px;
+	border: 2px solid;
+	background: rgba(255,255,255,.9);
 }
 
 .event-hover-container {
 	display: none;
 	position: absolute;
 	background: white;
-	z-index:100;
-	padding:20px;
+	z-index: 100;
+	padding: 20px;
 }
+
+.lobby-content-body {
+
+}
+
+	.lobby-content-body .title-header {
+		color: rgb(160, 160, 160);
+	}
+
+.title-header {
+	text-align: center;
+	font-size: 2em;
+	padding: 10px;
+	background: rgb(236, 236, 236);
+}
+
+.moje-sprawy-text {
+	color: gray;
+	margin-right: 10px;
+}
+
+.moje-sprawy-container {
+	margin-bottom: 20px;
+}
+
+#moje-sprawy-container {
+	display: none;
+}
+
+.selected-content-container {
+	display: none;
+	margin-bottom: 50px;
+	border: 1px solid whitesmoke;
+}
+
+.news-event-details {
+	padding: 10px 0;
+	text-align: center;
+	overflow: hidden;
+	position: relative;
+	margin-top:10px;
+	background:rgb(221,221,221);
+	box-shadow:inset 0 4px 10px rgb(202, 202, 202);
+}
+
+.left-event-details {
+	float: left;
+	width: 25%;
+	vertical-align: top;
+	position: relative;
+
+}
+
+.middle-event-details {
+	float: left;
+	width: 50%;
+	position: relative;
+	padding:20px;
+	color:gray;
+	background:rgb(202, 202, 202);
+	/*background:rgb(76, 86, 94);*/
+	/*box-shadow:0 1px 5px rgb(60,60,60);*/
+	/*border:1px solid rgb(207, 207, 207);*/
+	/*background:rgb(221,221,221);
+	box-shadow:inset 0 4px 10px rgb(202, 202, 202);*/
+}
+
+.right-event-details {
+	float: left;
+	width: 24%;
+}
+
+.lobby-profile-menu {
+	width: 100%;
+	color: whitesmoke;
+	font-size: 1em;
+	padding: 10px 0;
+	overflow: hidden;
+}
+
+	.lobby-profile-menu div {
+		display: inline-block;
+		float: right;
+		margin-left: 10px;
+	}
+
+.event-list-date-header {
+	text-align: center;
+	color: rgb(252,252,252);
+	/*margin-bottom:40px;*/
+	/*
+background:rgb(228, 111, 111);
+*/
+	/*background: rgb(111, 177, 228);*/
+	background: rgb(160, 213, 255);
+}
+
+.events-text-container {
+	text-align: left;
+}
+
+.events-text-name {
+	font-size: 1.2em;
+}
+
+
+.lobby-footer {
+	text-align: center;
+}
+
+.margin-left-fifteen {
+	margin-left: 15px;
+}
+
+.padding-top-ten {
+	padding-top: 10px;
+}
+
+.event-list {
+	width: 100%;
+	/*
+background: rgba(40,40,40,0.2);
+*/
+	/*-webkit-box-shadow: inset 0 3px 10px rgba(0,0,0,0.3);
+	-moz-box-shadow: inset 0 3px 10px rgba(0,0,0,0.3);
+	-ms-box-shadow: inset 0 3px 10px rgba(0,0,0,0.3);
+	-o-box-shadow: inset 0 3px 10px rgba(0,0,0,0.3);*/
+	/*box-shadow: inset 0 1px 1px white;*/
+	color: gray;
+	font-size: 1em;
+	overflow: hidden;
+	background:rgb(241,241,241);
+	border-top:1px solid white;
+}
+
+.login-text {
+	margin-right: 15px;
+	color: rgb(124, 124, 124);
+}
+
+.event-kind-text {
+	color: rgb(240,240,240);
+	width: 100px;
+	padding: 20px;
+	/*box-shadow: 0 2px 10px rgb(60, 60, 60);*/
+	margin-left: 15px;
+	margin-top: 10px;
+}
+
+.event-title-container {
+	background: rgba(0,0,0,.2);
+	padding: 10px 0px;
+	margin-bottom:10px;
+}
+
+.events-text-author-container {
+	position: absolute;
+	bottom: 10px;
+	right: 20px;
+	font-size: .8em;
+}
+
+.szkolenia-tab {
+}
+
+.kursy-tab {
+}
+
+spotkania-tab {
+}
+
+wydarzenia-tab {
+}
+
+.inne-tab {
+}
+
+.zajecia {
+}
+
+.szkolenia-border-tab {
+	border-bottom: 10px solid rgb(87, 167, 221);
+}
+
+.kursy-border-tab {
+	border-bottom: 10px solid rgb(145, 145, 145);
+}
+
+.spotkania-border-tab {
+	border-bottom: 10px solid rgb(255, 182, 215);
+}
+
+.wydarzenia-border-tab {
+	border-bottom: 10px solid rgb(255, 255, 132);
+}
+
+.inne-border-tab {
+	border-bottom: 10px solid rgb(250, 84, 84);
+}
+
+.zajecia-border-tab {
+	border-bottom: 10px solid rgb(187, 255, 241);
+}
+
 
 
 
@@ -488,7 +721,7 @@ Slider
 }
 
 	.slides-pagination a {
-		border: 2px solid rgb(115, 233, 162);
+		border: 2px solid rgb(221,221,221);
 		border-radius: 15px;
 		width: 10px;
 		height: 10px;
@@ -527,6 +760,10 @@ textarea {
 
 .editor-field {
 	margin: 0.5em 0 0 0;
+}
+
+a {
+	color: white;
 }
 
 
